# skills

./: .gitattributes  .gitignore  plan.md
mllm-structure-style/assets/mllm-infer-template/: .editorconfig  .env.example  .gitignore  README.md  pyproject.toml
mllm-structure-style/assets/mllm-infer-template/configs/: eval.yaml  infer.yaml
mllm-structure-style/assets/mllm-infer-template/configs/data/: mock.yaml
mllm-structure-style/assets/mllm-infer-template/configs/debug/: default.yaml
mllm-structure-style/assets/mllm-infer-template/configs/env/: default.yaml
mllm-structure-style/assets/mllm-infer-template/configs/eval_tasks/: default.yaml
mllm-structure-style/assets/mllm-infer-template/configs/experiment/: mock_smoke.yaml  vlmeval_smoke.yaml
mllm-structure-style/assets/mllm-infer-template/configs/extras/: default.yaml
mllm-structure-style/assets/mllm-infer-template/configs/hparams_search/: method_optuna.yaml
mllm-structure-style/assets/mllm-infer-template/configs/hydra/: default.yaml
mllm-structure-style/assets/mllm-infer-template/configs/local/: default.yaml.example
mllm-structure-style/assets/mllm-infer-template/configs/logger/: jsonl.yaml  null.yaml  (+1 more)
mllm-structure-style/assets/mllm-infer-template/scripts/: run_dist.sh  run_eval.sh  run_infer.sh  run_single.sh
mllm-structure-style/assets/mllm-infer-template/src/: eval.py  infer.py
mllm-structure-style/assets/mllm-infer-template/tests/: test_eval_orchestration.py  test_hf_wrapper_contract.py  test_hydra_config_tools.py  test_method_contract.py  test_mock_infer.py  test_vlmeval_adapter.py
(+654 files in other folders)
