[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "Hydra + torchrun MLLM inference project"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.30",
    "hydra-colorlog==1.2.0",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "pillow>=10",
    "python-dotenv>=1",
    "rich>=13",
    "rootutils>=1.0",
    "safetensors>=0.4",
    "torch>=2.1",
    "transformers>=4.41,<4.52",
]

[project.optional-dependencies]
eval = [
    "ms-vlmeval==0.0.19",
    "openai>=1.14.0",
]
tracking = [
    "wandb>=0.17",
]
sweeper = [
    "hydra-optuna-sweeper==1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN"]
ignore = ["ANN401"]

[tool.ruff.format]
quote-style = "double"
